<resources>
    <string name="app_name">Todo List</string>
    <string name="red">Red</string>
    <string name="pref_key_vibrate">pref_key_vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="pref_key_notifications_ringtone">pref_key_notifications_ringtone</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="app_version">1.0.0</string>
    <string name="title_version">Build version</string>
    <string name="app_theme_title">Theme</string>
    <string name="app_theme">Red</string>
    <string name="application_settings">Application Settings</string>
    <string name="pref_key_dark_theme">pref_key_dark_theme</string>
    <string name="summary_dark_theme">Change the look and feel of Tasks by changing to a dark themeName</string>
    <string name="title_dark_theme">Use dark themeName</string>
    <string name="notifications">Notifications</string>
    <string name="pref_key_version">pref_key_version</string>
    <string name="pref_key_theme">pref_key_theme</string>

    <string name="drawer_layout_open">Open</string>
    <string name="drawer_layout_close">Close</string>
    <string name="title_activity_navigation_view_drawer_layout">NavigationViewDrawerLayoutActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Category\'s</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_priority">Priority</string>
    <string name="menu_alphabetical_a_z">Alphabetical (A-Z)</string>
    <string name="menu_alphabetical_z_a">Alphabetical (Z-A)</string>
    <string name="menu_created_newest_first">Created (Newest first)</string>
    <string name="menu_created_oldest_first">Created (Oldest first)</string>
    <string name="menu_reminder_newest_first">Reminder (Newest first)</string>
    <string name="menu_reminder_oldest_first">Reminder (Oldest first)</string>
    <string name="task_name">Task Name</string>
    <string name="description">Description</string>
    <string name="reminder">Reminder</string>
    <string name="highlight">Highlight</string>
    <string name="priority">Priority</string>
    <string name="completed">Completed</string>
    <string name="subtitle">Subtitle</string>
</resources>
